.k8s/nginx/nginx-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80        # porta interna do cluster
      targetPort: 80  # porta do container
