.k8s/nginx/nginx-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  selector:
    app: nginx-test
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
