.k8s/nginx/nginx-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway
  hostnames:
    - "website.meuapp.com"
  rules:
    - matches:
        - path:
            type: Prefix
            value: "/"
      forwardTo:
        - serviceName: nginx-service
          port: 80
