.k8s/nginx/nginx-vservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  gateways:
    - nginx-gateway
  hosts:
    - "website.rs-ceschi.com.br"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nginx-service
            port:
              number: 80
